# ash

./: .env.example  .gitignore  AGENTS.md  PROMPT.md  README.md  SPECS.md  architectual_decisions  implementation_plan.md  pyproject.toml
configs/: features.yaml  model.yaml  training.yaml
data/: __init__.py  db_utils.py
data/exploration/: data_dictionary.md  db_connection.py  explore_schema.py  quality_report.md  sample_queries.sql
data/processors/: __init__.py  discretizer.py  feature_builder.py  sequence_builder.py
evaluation/: __init__.py  calibration.py  metrics.py
inference-rs/: BENCHMARK_RESULTS.md  Cargo.toml
inference-rs/benches/: latency.rs
inference-rs/src/: buffer.rs  features.rs  lib.rs  predictor.rs
inference-rs/tests/: test_parity.rs
models/: __init__.py
models/architectures/: __init__.py  losses.py  price_transformer.py
models/export/: __init__.py  onnx_export.py  validate_export.py
models/training/: __init__.py  data_loader.py  trainer.py
tests/: __init__.py
tests/feature_parity/: generate_vectors.py  test_vectors.json
tests/python/: test_calibration.py  test_data_loader.py  test_db_connection.py  test_discretizer.py  test_feature_builder.py  test_losses.py  test_metrics.py  test_onnx_export.py  test_price_transformer.py  test_sequence_builder.py  test_setup.py  test_trainer.py  test_validate_export.py
