[package]
name = "ash-inference"
version = "0.1.0"
edition = "2021"
authors = ["Ash Project Contributors"]
description = "Low-latency production inference for probabilistic price prediction"
license = "MIT"

[dependencies]
# ONNX Runtime bindings for model inference
ort = "2.0.0-rc.11"

# Efficient data structures
ndarray = "0.17"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Serialization for configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
# Testing utilities
criterion = "0.5"

[[bench]]
name = "latency"
harness = false

[profile.release]
# Optimize for speed with deterministic performance
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
inherits = "release"
